@@ -27,4 +27,25 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 #include "rxkcl.h"
 
 
+int
+cl_rxk::LD_BC_mn(t_mem code)
+{
+  u8_t l, h;
+  l= fetch();
+  h= fetch();
+  destBC().W(h*256+l);
+  tick(4);
+  return resGO;
+}
+
+int
+cl_rxk::LD_B_n(t_mem code)
+{
+  u8_t l;
+  l= fetch();
+  destB().W(l);
+  tick(3);
+  return resGO;
+}
+
 /* End of rxk.src/imove.cc */
